1.修正表达式中括号匹配的bug（只需在首括号判断是否函数调用） 2.完成所有变量的内存表格建立

--- a/Mips.vcxproj.filters
+++ b/Mips.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="source\MidCode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="source\MemoryManage.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Error.h">
@@ -54,9 +57,6 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="source\MidCode.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="MemoryManage.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="source\MemoryManage.h">
