--- a/Mips.vcxproj
+++ b/Mips.vcxproj
@@ -127,12 +127,12 @@
     <ClCompile Include="source\FILEOperator.cpp" />
     <ClCompile Include="source\GMAnalysis.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\MemoryManage.cpp" />
     <ClCompile Include="source\MidCode.cpp" />
     <ClCompile Include="source\SymbolTable.cpp" />
     <ClCompile Include="source\TkAnalysis.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MemoryManage.h" />
     <ClInclude Include="source\Error.h" />
     <ClInclude Include="source\FILEOperator.h" />
     <ClInclude Include="source\GMAnalysis.h" />
