--- a/Mips.vcxproj.filters
+++ b/Mips.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="source\MemoryManage.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="source\MipsGen.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Error.h">
@@ -60,6 +63,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="source\MemoryManage.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\MipsGen.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
