--- a/Mips.vcxproj.filters
+++ b/Mips.vcxproj.filters
@@ -42,6 +42,24 @@
     <ClCompile Include="source\MipsGen.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="source\er_source\er_Error.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\er_source\er_GMAnalysis.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\er_source\er_FILEOperator.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\er_source\er_SymbolTable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\er_source\er_main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\er_source\er_TkAnalysis.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Error.h">
@@ -66,6 +84,21 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="source\MipsGen.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\er_source\er_Error.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\er_source\er_FILEOperator.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\er_source\er_GMAnalysis.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\er_source\er_SymbolTable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\er_source\er_TkAnalysis.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
